# pyddos

./: LICENSE  README.md  main.py  pyproject.toml
snakeddos/: __init__.py  applications.py  consts.py  exceptions.py
tests/: __init__.py  mechanics_test.py
