[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "snakeddos"
version = "0.0.3"
authors = [
  { name="Victor deMatos", email="vvrmatos@protonmail.com" },
]
description = "DDoS library"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/shimon-d/snakeddos"
"Bug Tracker" = "https://github.com/shimon-d/snakeddos/issues"